quick fix impl to add input parameters to flow documentation blocks

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -93,3 +93,6 @@ inspection.flow.doc.fix.show.duplicates=Show all duplicates
 
 inspection.flow.doc.fix.keyword=Change keyword to ''{0}''
 inspection.flow.doc.fix.keyword.family=Change parameter keyword
+
+AddParameterToFlowDocQuickFix.text=Add ''{0}'' to flow documentation
+AddParameterToFlowDocQuickFix.family=Add parameter to flow documentation
