--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -96,3 +96,6 @@ inspection.flow.doc.fix.keyword.family=Change parameter keyword
 
 AddParameterToFlowDocQuickFix.text=Add ''{0}'' to flow documentation
 AddParameterToFlowDocQuickFix.family=Add parameter to flow documentation
+
+AddParameterToFlowDocQuickFix.notification.content=Added parameter ''{0}'' to flow ''{1}''
+AddParameterToFlowDocQuickFix.notification.view=View
