--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -93,3 +93,9 @@ inspection.flow.doc.fix.show.duplicates=Show all duplicates
 
 inspection.flow.doc.fix.keyword=Change keyword to ''{0}''
 inspection.flow.doc.fix.keyword.family=Change parameter keyword
+
+AddParameterToFlowDocQuickFix.text=Add ''{0}'' to flow documentation
+AddParameterToFlowDocQuickFix.family=Add parameter to flow documentation
+
+AddParameterToFlowDocQuickFix.notification.content=Added parameter ''{0}'' to flow ''{1}''
+AddParameterToFlowDocQuickFix.notification.view=View
