--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -99,3 +99,7 @@ AddParameterToFlowDocQuickFix.family=Add parameter to flow documentation
 
 AddParameterToFlowDocQuickFix.notification.content=Added parameter ''{0}'' to flow ''{1}''
 AddParameterToFlowDocQuickFix.notification.view=View
+
+# Call Hierarchy
+hierarchy.dynamic.marker=(dynamic)
+hierarchy.invalid.element=<invalid>
