--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -110,3 +110,32 @@ inspection.out.of.scope.message=This file is not in any Concord scope. Flow navi
 notification.out.of.scope.message=This file is not in any Concord scope. Flow navigation and other features may be limited.
 notification.out.of.scope.dismiss=Don't show again
 notification.group.concord=Concord
+
+# CLI Settings
+cli.settings.display.name=Concord CLI
+cli.settings.path.label=CLI executable:
+cli.settings.version.label=Version:
+cli.settings.version.not.detected=Not detected
+cli.settings.download.button=Download...
+cli.settings.browse.title=Select Concord CLI Executable
+cli.settings.download.title=Download Concord CLI
+cli.settings.download.select.version=Select version:
+cli.settings.download.success=Concord CLI {0} downloaded successfully
+cli.settings.download.error=Failed to download Concord CLI: {0}
+cli.settings.fetching.versions=Fetching available versions...
+cli.settings.invalid.path=Invalid CLI path
+
+# Run Configuration
+run.configuration.name=Concord Flow
+run.configuration.description=Run Concord flow locally using Concord CLI
+run.configuration.entry.point.label=Entry point (flow name):
+run.configuration.entry.point.empty=Entry point is not specified
+run.configuration.working.dir.label=Working directory:
+run.configuration.parameters.label=Parameters (-e key=value):
+run.configuration.additional.args.label=Additional CLI arguments:
+run.configuration.cli.not.configured=Concord CLI is not configured. Please configure it in Settings | Tools | Concord CLI
+run.configuration.cli.invalid=Configured Concord CLI path is invalid
+
+# Run Line Marker
+run.flow.action.text=Run ''{0}''
+run.flow.action.description=Run this Concord flow
