--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -103,3 +103,10 @@ AddParameterToFlowDocQuickFix.notification.view=View
 # Call Hierarchy
 hierarchy.dynamic.marker=(dynamic)
 hierarchy.invalid.element=<invalid>
+
+# Out of scope warnings
+inspections.out.of.scope.name=File outside Concord scope
+inspection.out.of.scope.message=This file is not in any Concord scope. Flow navigation and other features may be limited.
+notification.out.of.scope.message=This file is not in any Concord scope. Flow navigation and other features may be limited.
+notification.out.of.scope.dismiss=Don't show again
+notification.group.concord=Concord
