--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -44,5 +44,8 @@
   "engines": {
     "node": "25.4.0",
     "npm": "11.7.0"
+  },
+  "overrides": {
+    "postcss-selector-parser": "^7.0.0"
   }
 }
