--- a/docs-site/concord-files/syntax-highlighting/concord.yaml
+++ b/docs-site/concord-files/syntax-highlighting/concord.yaml
@@ -13,6 +13,6 @@ flows:
         - log: "Skipping prod deployment."
 
   deployProd:
-    - task: ansble
+    - task: ansible
       in:
         playbook: "deploy.yml"
