--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 pluginGroup = brig.concord.concord-intellij
 pluginName = Concord
 # SemVer format -> https://semver.org
-pluginVersion = 0.16.0
+pluginVersion = 0.17.0-SNAPSHOT
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 251
@@ -13,7 +13,7 @@ platformVersion = 2025.3.1.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = JavaScript, org.intellij.groovy
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
