--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: Build
 on:
-  # Trigger the workflow on pushes to only the 'main' branch (this avoids duplicate checks being run e.g. for dependabot pull requests)
   push:
     branches: [main]
-  # Trigger the workflow on any pull request
   pull_request:
 
 concurrency:
@@ -11,28 +9,26 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-
-  # Run Gradle Wrapper Validation Action to verify the wrapper's checksum
-  # Run verifyPlugin, IntelliJ Plugin Verifier, and test Gradle tasks
-  # Build plugin and provide the artifact for the next workflow jobs
   build:
     name: Build
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ github.event_name != 'pull_request' || !contains(github.event.pull_request.labels.*.name, 'don''t test') }}
+    if: >
+      github.event_name != 'pull_request' || 
+      (
+        !contains(github.event.pull_request.labels.*.name, 'don''t test') && 
+        !contains(github.event.pull_request.labels.*.name, 'release')
+      )
     outputs:
       version: ${{ steps.properties.outputs.version }}
       changelog: ${{ steps.properties.outputs.changelog }}
     steps:
-
-      # Free GitHub Actions Environment Disk Space
       - name: Maximize Build Space
         run: |
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /opt/ghc
 
-      # Check out current repository
       - name: Fetch Sources
         uses: actions/checkout@v4
 
@@ -60,20 +56,9 @@ jobs:
         run: |
           set -euo pipefail
 
-          VERSION="$(./gradlew printVersion -q --console=plain 2>&1 | tr -d '\r' | awk 'NF{last=$0} END{print last}')"
-          NAME="$(./gradlew printPluginName -q --console=plain 2>&1 | tr -d '\r' | awk 'NF{last=$0} END{print last}')"
-          CHANGELOG="$(./gradlew printUnreleasedChangelog -q --console=plain 2>&1 | tr -d '\r')"
-
-          {
-            echo "version=$VERSION"
-            echo "name=$NAME"
-            echo "pluginVerifierHomeDir=$HOME/.pluginVerifier"
-            echo "changelog<<EOF"
-            printf '%s\n' "$CHANGELOG"
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
-
-          ./gradlew printProductsReleases -q # prepare list of IDEs for Plugin Verifier
+          ./gradlew printProductsReleases -q
+  
+          echo "pluginVerifierHomeDir=$HOME/.pluginVerifier" >> "$GITHUB_OUTPUT"
 
       # Run tests
       - name: Run Tests
@@ -127,43 +112,3 @@ jobs:
         with:
           name: ${{ steps.artifact.outputs.filename }}
           path: ./build/distributions/content/*/*
-
-  # Prepare a draft release for GitHub Releases page for the manual verification
-  # If accepted and published, release workflow would be triggered
-  releaseDraft:
-    name: Release Draft
-    if: github.event_name != 'pull_request'
-    needs: build
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    permissions:
-      contents: write
-    steps:
-
-      # Check out current repository
-      - name: Fetch Sources
-        uses: actions/checkout@v4
-
-      # Remove old release drafts by using the curl request for the available releases with draft flag
-      - name: Remove Old Release Drafts
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh api repos/{owner}/{repo}/releases \
-            --jq '.[] | select(.draft == true) | .id' \
-            | xargs -I '{}' gh api -X DELETE repos/{owner}/{repo}/releases/{}
-
-      # Create new release draft - which is not publicly visible and requires manual acceptance
-      - name: Create Release Draft
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        shell: bash
-        run: |
-          set -euo pipefail
-          NOTES_FILE="release-notes.md"
-          echo "${{ needs.build.outputs.changelog }}" > "$NOTES_FILE"
-
-          gh release create "v${{ needs.build.outputs.version }}" \
-            --draft \
-            --title "v${{ needs.build.outputs.version }}" \
-            --notes-file "$NOTES_FILE"
