--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -60,7 +60,6 @@ YAMLLanguageCodeStyleSettingsProvider.group.sequence.value=Sequence value
 YAMLLanguageCodeStyleSettingsProvider.sequence.on.new.line=Sequence on new line
 YAMLLanguageCodeStyleSettingsProvider.block.mapping.on.new.line=Block mapping on new line
 YAMLLanguageCodeStyleSettingsProvider.indent.sequence.value=Indent sequence value
-YAMLLanguageCodeStyleSettingsProvider.autoinsert.sequence.marker=Automatically insert hyphen on enter
 
 inspections.duplicated.keys.name=Duplicated YAML keys
 inspection.duplicate.keys.message=Duplicate key ''{0}'' in the same mapping
@@ -111,8 +110,11 @@ notification.out.of.scope.message=This file is not in any Concord scope. Flow na
 notification.out.of.scope.dismiss=Don't show again
 notification.group.concord=Concord
 
+# Settings
+settings.display.name=Concord
+
 # CLI Settings
-cli.settings.display.name=Concord CLI
+cli.settings.display.name=CLI
 cli.settings.path.label=CLI executable:
 cli.settings.version.label=Version:
 cli.settings.version.not.detected=Not detected
@@ -135,7 +137,25 @@ run.configuration.parameters.label=Parameters (-e key=value):
 run.configuration.additional.args.label=Additional CLI arguments:
 run.configuration.cli.not.configured=Concord CLI is not configured. Please configure it in Settings | Tools | Concord CLI
 run.configuration.cli.invalid=Configured Concord CLI path is invalid
+run.configuration.run.mode.hint=Run mode: {0}
+run.configuration.run.mode.link=Configure...
+run.configuration.working.dir.browse.title=Select Working Directory
 
 # Run Line Marker
 run.flow.action.text=Run ''{0}''
 run.flow.action.description=Run this Concord flow
+
+# Run Mode Settings
+run.mode.settings.display.name=Run Mode
+run.mode.label=Run mode:
+run.mode.direct.label=Direct (run clicked flow)
+run.mode.delegating.label=Delegating (run via wrapper)
+run.mode.main.entry.point.label=Main entry point:
+run.mode.flow.param.name.label=Flow parameter name:
+run.mode.main.entry.point.empty=Main entry point cannot be empty
+run.mode.flow.param.name.empty=Flow parameter name cannot be empty
+run.mode.active.profiles.label=Active profiles (-p):
+run.mode.active.profiles.placeholder=e.g. dev, test
+run.mode.default.params.label=Default parameters (-e):
+run.mode.default.params.column.name=Name
+run.mode.default.params.column.value=Value
