--- a/.github/workflows/release-coordinator.yml
+++ b/.github/workflows/release-coordinator.yml
@@ -6,18 +6,14 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
-  create-draft-release:
+  prepare-docs:
+    name: Prepare Docs PR
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'release')
     runs-on: ubuntu-latest
     steps:
-      - name: Maximize Build Space
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /usr/local/lib/android
-          sudo rm -rf /opt/ghc
-
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -29,11 +25,6 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
-        with:
-          cache-read-only: true
-
-      - name: Gradle Wrapper Validation
-        uses: gradle/actions/wrapper-validation@v5
 
       - name: Warm up Gradle distribution
         run: ./gradlew --version --console=plain
@@ -44,7 +35,7 @@ jobs:
           VERSION=$(./gradlew printVersion -q --console=plain)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Setup Node (for Docusaurus)
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
@@ -56,20 +47,11 @@ jobs:
         run: |
           VERSION="${{ steps.version.outputs.version }}"
           TODAY=$(date +%Y-%m-%d)
-          
           PLACEHOLDER_FILE="docs-site/blog/xxxx-xx-xx-release-${VERSION}.mdx"
           TARGET_FILE="docs-site/blog/${TODAY}-release-${VERSION}.mdx"
           
           if [ -f "$PLACEHOLDER_FILE" ]; then
-            echo "Found placeholder file: $PLACEHOLDER_FILE"
-            echo "Renaming to: $TARGET_FILE"
-            
             mv "$PLACEHOLDER_FILE" "$TARGET_FILE"
-            
-            echo "renamed=true" >> $GITHUB_OUTPUT
-          else
-            echo "Placeholder file not found. Assuming it was renamed manually."
-            echo "renamed=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Freeze Docs Version
@@ -78,22 +60,63 @@ jobs:
           npm ci          
           npm run docusaurus docs:version ${{ steps.version.outputs.version }}
 
-      - name: Commit Frozen Docs
+      - name: Create Docs PR
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
-          git add docs-site/versions.json docs-site/versioned_docs docs-site/versioned_sidebars
+          VERSION="${{ steps.version.outputs.version }}"
+          BRANCH_NAME="action/freeze-docs-$VERSION"
           
-          git commit -m "docs: freeze version ${{ steps.version.outputs.version }} [skip ci]"
-          git push origin main
+          git checkout -b "$BRANCH_NAME"
+          git add docs-site/versions.json docs-site/versioned_docs docs-site/versioned_sidebars docs-site/blog
+          
+          if ! git diff --staged --quiet; then
+            git commit -m "docs: freeze version $VERSION"
+            git push origin "$BRANCH_NAME" --force
+            
+            gh pr create \
+              --title "docs: freeze version $VERSION" \
+              --body "Automated documentation freeze for version $VERSION. Merge this PR to trigger Release Draft creation." \
+              --base main \
+              --head "$BRANCH_NAME" \
+              --label "internal-docs-freeze"
+          else
+            echo "No changes in docs."
+          fi
+
+  create-release-draft:
+    name: Create Release Draft
+    if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'internal-docs-freeze')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 21
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
+
+      - name: Warm up Gradle distribution
+        run: ./gradlew --version --console=plain
+
+      - name: Extract Version
+        id: version
+        run: |
+          VERSION=$(./gradlew printVersion -q --console=plain)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Extract Release Notes
         id: extract_notes
-        shell: bash
         run: |
           NOTES=$(./gradlew getChangelog --unreleased --no-header --console=plain)
-          
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
           echo "$NOTES" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -111,15 +134,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ steps.version.outputs.version }}
           NOTES: ${{ env.RELEASE_NOTES }}
-        shell: bash
         run: |
-          set -euo pipefail
-          
-          NOTES_FILE="release-notes.md"
-          echo "${NOTES}" > "$NOTES_FILE"
-
+          echo "${NOTES}" > release-notes.md
           gh release create "v$VERSION" \
             --draft \
             --title "v$VERSION" \
-            --notes-file "$NOTES_FILE" \
+            --notes-file release-notes.md \
             --target main
