--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
       github.event_name != 'pull_request' || 
       (
         !contains(github.event.pull_request.labels.*.name, 'don''t test') && 
-        !contains(github.event.pull_request.labels.*.name, 'release')
+        !contains(github.event.pull_request.labels.*.name, 'release') &&
+        !contains(github.event.pull_request.labels.*.name, 'internal-docs-freeze')
       )
     outputs:
       version: ${{ steps.properties.outputs.version }}
