publish plugin fix

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ gradleVersion = 8.13
 # Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
+
+org.gradle.jvmargs=-Xmx2g
