navigation from any Concord file to its root

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -95,6 +95,7 @@
         <!-- Navigation -->
         <fileBasedIndex implementation="brig.concord.navigation.FlowNamesIndex"/>
         <searchEverywhereContributor implementation="brig.concord.navigation.FlowDefinitionSearchEverywhereContributor$Factory"/>
+        <gotoRelatedProvider implementation="brig.concord.navigation.ConcordRootGotoRelatedProvider"/>
 
         <!-- Call Hierarchy -->
         <callHierarchyProvider language="Concord"
